--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ Main Colors:
 }
 
 /* Navbar Styles */
+nav {
+  width: 100%;
+}
+
 .navbar {
   list-style-type: none;
   text-transform: capitalize;
