--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,22 @@ Main Colors:
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding-top: 15vh;
   color: white;
   font-family: "Tomorrow", sans-serif;
   text-align: center;
 }
 
+h2 {
+  font-size: 1.2rem;
+}
+
 /* Navbar Styles */
 nav {
   width: 100%;
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .navbar {
@@ -28,10 +35,6 @@ nav {
   justify-content: space-around;
   padding: 1rem;
   margin: auto;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .navbar li {
@@ -62,9 +65,9 @@ nav {
 }
 
 button.primary {
-  padding: 1rem 2rem;
+  padding: 1em;
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border: none;
   background-color: #fde74cff;
   font-family: "Tomorrow", sans-serif;
