💄 adds a blinking underscore to the title

--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,24 @@ button.primary {
   background-color: #fde74cff;
   font-family: "Tomorrow", sans-serif;
 }
+
+/* UNDERSCORE ANIMATION */
+.underscore {
+  color: #f7f7f7;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+.underscore:after {
+  content: "_";
+  font-weight: bold;
+  animation: blinking 1s step-end infinite;
+}
+@keyframes blinking {
+  from,
+  to {
+    visibility: hidden;
+  }
+  50% {
+    visibility: visible;
+  }
+}
