--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ Main Colors:
 #bf211eff
 */
 
+a {
+  text-decoration: none;
+  color: unset;
+}
+
 .App {
   background-color: #bf211eff;
   height: 100vh;
